Introduce javac tool type